--- a/index.html
+++ b/index.html
@@ -13,126 +13,126 @@
 
     <section class="gallery">
       <img
-        src="images/arms_around.jpg"
+        src="arms_around.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="this picture IS SO GOOD"
         alt="Arms Around"
       />
       <img
-        src="images/back.jpg"
+        src="back.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="you playing with my hair in this"
         alt="Back Pose"
       />
       <img
-        src="images/biceps.JPEG"
+        src="biceps.JPEG"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="bicep bite "
         alt="Biceps Flex"
       />
       <img
-        src="images/bus.jpeg"
+        src="bus.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="whos this freak on the bus"
         alt="Bus Ride"
       />
       <img
-        src="images/changingrooms.jpeg"
+        src="changingrooms.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="what happend here??!"
         alt="Changing Rooms"
       />
       <img
-        src="images/dab.jpg"
+        src="dab.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the dab of the century"
         alt="Dab Pose"
       />
       <img
-        src="images/finger_heart.jpeg"
+        src="finger_heart.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="finger heart 🫶"
         alt="Finger Heart"
       />
       <img
-        src="images/her_smile.jpg"
+        src="her_smile.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="i love your smile in this"
         alt="Her Smile"
       />
       <img
-        src="images/holding_hands.jpg"
+        src="holding_hands.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the hand holding in this"
         alt="Holding Hands"
       />
       <img
-        src="images/intimate_stare.jpeg"
+        src="intimate_stare.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="STARING INTO EACH OTHERS EYES"
         alt="Intimate Stare"
       />
       <img
-        src="images/jeans.jpeg"
+        src="jeans.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the jeans we wanted to 'try on'"
         alt="Jeans Style"
       />
       <img
-        src="images/kisssmeeee.jpeg"
+        src="kisssmeeee.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="THIS KISS"
         alt="Kiss Moment"
       />
       <img
-        src="images/the_back.jpeg"
+        src="the_back.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="backv2"
         alt="The Back"
       />
       <img
-        src="images/the_photo_round_2.jpeg"
+        src="the_photo_round_2.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the iconic mirror pic"
         alt="Photo Round 2"
       />
       <img
-        src="images/theKISSSSS.jpeg"
+        src="theKISSSSS.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the kiss that caught you off guard"
         alt="The Kiss"
       />
       <img
-        src="images/thephotoagain.jpeg"
+        src="thephotoagain.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="the photo of the century"
         alt="Photo Again"
       />
       <img
-        src="images/tongue.jpg"
+        src="tongue.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="i like my tongue in this"
         alt="Tongue Out"
       />
       <img
-        src="images/whos_that_freak.jpeg"
+        src="whos_that_freak.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="whos this noob"
