--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         alt="Back Pose"
       />
       <img
-        src="biceps.JPEG"
+        src="biceps.jpg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="bicep bite "
