--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         alt="Bus Ride"
       />
       <img
-        src="changingrooms.jpeg"
+        src="IMG_0592.jpeg"
         class="gallery-img"
         onclick="openLightbox(this)"
         data-caption="what happend here??!"
